# shadow-engine

./: .gitignore  API_DOCS.md  ARCHITECTURE.md  CHANGELOG.md  CONSULTING.md  CONTRIBUTING.md  DEVTO_POST.md  DEVTO_WELCOME_POST.md  FINDINGS_REPORT.md  HN_POST.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  pyrightconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.test.yml  docker-compose.yml
docs/: bug_database.json  case_study_results.json  hypothesis_proof.json  hypothesis_results.json  rag_results.json
scripts/: _debug_single.py  _fix.py  _single_test.py  _test_extract.py  _test_ollama_extract.py  _verify_bugs.py  benchmark.py  build_efficacy_data.py  definitive_proof.py  generate_bugs.py  longitudinal.py  prove_hypothesis.py  real_demo.py  run_case_study.py  test_breakthrough_features.py  test_breakthroughs.py  test_bugs.py  test_docker_sandbox.sh  test_hivemind.py  test_meta_reasoning.py  test_multimodel_e2e.py  test_ollama_e2e.py  test_openai_e2e.py  test_testbed.py  testbed.py  validate_learning.py
src/shadow_engine/: __init__.py  main.py  observability.py  retrieval_fixer.py
src/shadow_engine/api/: __init__.py
src/shadow_engine/api_server/: server.py
src/shadow_engine/async_lab/: __init__.py  executor.py
src/shadow_engine/chroma_store/: __init__.py  vector_store.py
src/shadow_engine/integrations/: __init__.py  openinspect.py
src/shadow_engine/knowledge_graph/: __init__.py  indexer.py  models.py  store.py
src/shadow_engine/laboratory/: __init__.py  debate.py  experiment.py
src/shadow_engine/learning/: __init__.py  bayesian_predictor.py  causal_engine.py  code_diff_analyzer.py  codebase_qa.py  context_budget.py  context_builder.py  diff_patterns.py  engine.py  experimental.py  graceful.py  health_score.py  hot_zones.py  impact_predictor.py  intervention_engine.py  live_monitor.py  pattern_merger.py  pr_simulator.py  risk_gate.py  session_replay.py  speculative_context.py  strategy_evolution.py  (+3 more)
tests/: __init__.py  conftest.py  test_api_integration.py  test_api_server.py  test_async_lab.py  test_coverage_gaps.py  test_experimental_engines.py  test_integration.py  test_knowledge_graph.py  test_laboratory.py  test_learning.py  test_providers.py  test_redis_limiter.py  test_sandbox_execution.py
(+6 files in other folders)
