[project]
name = "shadow-engine"
version = "0.1.0"
description = "A self-improving background agent with persistent codebase knowledge graph and parallel experimentation"
requires-python = ">=3.12"
authors = [{ name = "Rudraneel Das", email = "rudraneel93@github.com" }]
license = { text = "MIT" }
readme = "README.md"
keywords = [
    "background-agent",
    "coding-agent",
    "knowledge-graph",
    "codebase-intelligence",
    "parallel-experimentation",
    "cross-session-learning",
    "ai-agent",
    "code-indexing",
    "semantic-search",
    "developer-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/rudraneel93/shadow-engine"
Documentation = "https://github.com/rudraneel93/shadow-engine#readme"
Repository = "https://github.com/rudraneel93/shadow-engine"
Issues = "https://github.com/rudraneel93/shadow-engine/issues"
Changelog = "https://github.com/rudraneel93/shadow-engine/blob/main/CHANGELOG.md"

dependencies = [
    "chromadb>=0.5.0",
    "tree-sitter>=0.23.0",
    "networkx>=3.3",
    "numpy>=2.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "tiktoken>=0.7.0",
    "sentence-transformers>=3.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]
redis = ["redis>=5.0.0"]

[project.scripts]
shadow-engine = "shadow_engine.main:cli_main"
shadow-engine-server = "shadow_engine.api_server.server:app"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["shadow_engine*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"